--- a/index.html
+++ b/index.html
@@ -2367,6 +2367,82 @@
                 grid-template-columns: repeat(2, 1fr);
             }
 
+            /* Program output mobile layout */
+            .program-output {
+                overflow-x: hidden;
+            }
+
+            .week-tabs {
+                gap: 6px;
+                overflow-x: auto;
+                padding-bottom: 6px;
+            }
+
+            .week-tab {
+                padding: 10px 12px;
+                font-size: 0.8rem;
+            }
+
+            .week-header {
+                padding: 12px 14px;
+            }
+
+            .week-header .week-title {
+                font-size: 1.1rem;
+            }
+
+            .workout-block-header {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 6px;
+            }
+
+            .duration-badge {
+                align-self: flex-start;
+            }
+
+            .exercise-list-output {
+                padding: 14px;
+            }
+
+            .exercise-item {
+                grid-template-columns: 1fr;
+                gap: 8px;
+                align-items: center;
+            }
+
+            .exercise-number {
+                text-align: left;
+                line-height: 1;
+            }
+
+            .exercise-name-row {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 6px;
+            }
+
+            .method-tags {
+                width: 100%;
+                justify-content: flex-start;
+                flex-wrap: wrap;
+                gap: 6px;
+            }
+
+            .method-tag {
+                font-size: 0.7rem;
+            }
+
+            .sets-reps,
+            .rest,
+            .rep-range-note,
+            .tempo,
+            .density,
+            .user-note,
+            .load-guidance {
+                font-size: 0.85rem;
+            }
+
             /* Compact goal grid - 2 columns */
             .goal-grid {
                 grid-template-columns: repeat(2, 1fr);
